samples/_failures_safe/1761460415_70c3ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a6d3d6b.c:140:1: error: expected identifier or ‘(’ at end of input
  140 | const char
      | ^~~~~
